# mkdocs-to-pdf

./: .cspell.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  settings.sh  shell.nix
.github/workflows/: release.yml
custom_style_src/material-polyfills/: tsconfig.json
custum_style_src/material-polyfills/: package-lock.json  package.json
docker/mkdocs-with-pdf/alpine/: Dockerfile
docker/mkdocs-with-pdf/debian/: Dockerfile
docker/mkdocs-with-pdf/debian/fonts/Gentium-Book-Basic/: OFL.txt
docker/mkdocs-with-pdf/tiny/: Dockerfile
docs/: FAQ.md  installation.md  stuff-to-migrate.md  usage.md
docs/examples/: annotations.md  basics.md  buttons.md  cjk-fonts.md  content-tabs.md  diagrams.md  formatting.md  icons-emojis.md  images.md  lists.md  mathjax.md
mkdocs_with_pdf/: generator.py  options.py
mkdocs_with_pdf/drivers/: headless_chrome.py  relaxedjs.py
mkdocs_with_pdf/themes/: material.scss
mkdocs_with_pdf/utils/: image_util.py  mermaid_util.py
samples/material/: Makefile  generate-requirements-full.sh  requirements-full.txt  requirements.txt
samples/material/admonitions/: mkdocs.yml
samples/material/admonitions/docs/: index.md
samples/material/annotations/: mkdocs.yml
samples/material/blockquotes/: Makefile  mkdocs.yml  requirements-full.txt  requirements.txt
samples/material/blockquotes/docs/: index.md
samples/material/buttons/: mkdocs.yml
samples/material/cjk_fonts/: mkdocs.yml
samples/material/code_blocks/: mkdocs.yml
samples/material/code_blocks/docs/: index.md
samples/material/content_tabs/: mkdocs.yml
samples/material/data_tables/: mkdocs.yml
samples/material/data_tables/docs/: index.md
samples/material/download_link/: mkdocs.yml
samples/material/download_link/docs/: index.md
samples/material/footnotes/: mkdocs.yml
samples/material/footnotes/docs/: index.md
samples/material/formatting/: mkdocs.yml
samples/material/formatting/docs/: index.md
samples/material/grids/: mkdocs.yml
samples/material/grids/docs/: index.md
samples/material/icons_emojis/: mkdocs.yml
samples/material/icons_emojis/docs/: index.md
samples/material/images/: mkdocs.yml
samples/material/images/docs/: index.md
samples/material/lists/: mkdocs.yml  requirements-full.txt
samples/material/lists/docs/: index.md
samples/material/tooltips/: mkdocs.yml
samples/material/tooltips/docs/: index.md
samples/mkdocs/: Makefile  README.md  mkdocs-to-pdf.yml  mkdocs-yml.patch  mkdocs.yml
samples/mkdocs-material/: Makefile  README.md  mkdocs-yml.patch  mkdocs.yml
scripts/: update_version.sh
src/mkdocs_to_pdf/: generator.py  options.py  plugin.py  toc.py
src/mkdocs_to_pdf/drivers/: event_hook.py  headless_chrome.py
src/mkdocs_to_pdf/pdf_engines/: __init__.py  base.py  chromium.py  weasyprint.py
src/mkdocs_to_pdf/preprocessor/: __init__.py
src/mkdocs_to_pdf/preprocessor/links/: util.py
src/mkdocs_to_pdf/styles/: __init__.py
src/mkdocs_to_pdf/templates/: template.py
src/mkdocs_to_pdf/themes/: generic.py  material.py  mkdocs.py
src/mkdocs_to_pdf/utils/: image_util.py
tests/: Makefile  test_links.py
tests/lists/: requirements-full.txt
tests/mkdocs_to_pdf/pdf_engines/: test_chromium.py
tests/mkdocs_to_pdf/preprocessor/links/: test_util.py
