[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-to-pdf"
version = "0.10.0"
description = "Generate a single PDF file from an `mkdocs` repository"
readme = "README.md"
requires-python = ">=3.8"
# # From setup.py
# dependencies = [
#     "beautifulsoup4 >= 4.6.3",
#     "libsass >= 0.15",
#     "mkdocs >= 1.1",
#     "weasyprint >= 0.44",
# ]
# From Pipfile.lock
dependencies = [
    "beautifulsoup4==4.9.3",
    "cairocffi==1.2.0; python_version >= '3.6'",
    "cairosvg==2.5.2; python_version >= '3.5'",
    "cffi==1.14.6",
    "click==8.0.1; python_version >= '3.6'",
    "cssselect2==0.4.1; python_version >= '3.6'",
    "defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'",
    "future==0.18.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "html5lib==1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'",
    "jinja2==3.0.1; python_version >= '3.6'",
    "joblib==1.0.1; python_version >= '3.6'",
    "libsass==0.20.1",
    "livereload==2.6.3",
    "lunr==0.5.8",
#   "markdown==3.3.4; python_version >= '3.6'",  # mkdocs 1.6.0 needs newer
    "markdown==3.3.6; python_version >= '3.6'",
    "markupsafe==2.0.1; python_version >= '3.6'",
    "mkdocs==1.6.0",
    "nltk==3.6.2",
    "pillow==8.3.2",
    "pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "pyphen==0.11.0; python_version >= '3.6'",
    "pyyaml==5.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'",
#   "regex==2021.8.28",  # mkdocs-material 9.6.5 needs newer
    "regex==2022.4.24",
    "six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "soupsieve==2.2.1; python_version >= '3.0'",
    "tinycss2==1.1.0; python_version >= '3.6'",
    "tornado==6.1; python_version >= '3.5'",
    "tqdm==4.62.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "weasyprint==52.2",
    "webencodings==0.5.1",
]
maintainers = [
    { name = "Dom Walters" },
]
keywords = ["mkdocs", "material", "pdf", "weasyprint"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# # From setup.py
# [project.dependencies]
# beautifulsoup4 = ">=4.6.3"
# libsass = ">=0.15"
# mkdocs = ">=1.1"
# weasyprint = ">=0.44"

# # From Pipfile
# [project.optional-dependencies]
# dev = [
#     "autopep8",
#     "flake8",
#     "mdx-gh-links",
#     "mkdocs-material-extensions>=1.0",
#     "mkdocs-material>=5.0",
#     "mkdocs-minify-plugin",
#     "mkdocs-redirects",
#     "pymdown-extensions>=7.0",
#     "python-barcode",
#     "qrcode"
# ]

# From Pipfile.lock
[project.optional-dependencies]
dev = [
    "autopep8==1.5.5",
    "brotli==1.0.9",
    "flake8==3.8.4",
    "fonttools==4.26.2; python_version >= '3.6'",
    "ghp-import==2.0.1",
    "htmlmin==0.1.12",
    "importlib-metadata==4.8.1; python_version >= '3.6'",
#   "jsmin==2.2.2",  # Needs 2to3
    "jsmin==3.0.1",
    "mccabe==0.6.1",
    "mdx-gh-links==0.2",
    "mergedeep==1.3.4; python_version >= '3.6'",
    "mkdocs-material==7.0.3",
    "mkdocs-material-extensions==1.0.1",
    "mkdocs-minify-plugin==0.4.0",
    "mkdocs-redirects==1.0.1",
    "packaging==21.0; python_version >= '3.6'",
    "pycodestyle==2.6.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "pydyf==0.1.1; python_version >= '3.6'",
    "pyflakes==2.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "pygments==2.10.0; python_version >= '3.5'",
    "pymdown-extensions==8.1.1",
    "pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "python-barcode==0.13.1",
    "python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "pyyaml-env-tag==0.1; python_version >= '3.6'",
    "qrcode==6.1",
    "toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "watchdog==2.1.5; python_version >= '3.6'",
    "zipp==3.5.0; python_version >= '3.6'",
    "zopfli==0.1.8"
]

[project.entry-points."mkdocs.plugins"]
to-pdf = "mkdocs_to_pdf.plugin:WithPdfPlugin"

[project.urls]
Repository = "https://github.com/domWalters/mkdocs-to-pdf"


# [tool.codespell]
# skip = ""

[tool.hatch.build]
include = [
    "src/mkdocs_to_pdf/**/*.py",
    "src/mkdocs_to_pdf/**/py.typed",
]
exclude = [
  "/.*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_to_pdf"]
